[project]
name = "interview-backend"
version = "1.4.24"
description = ""
authors = [
    {name = "thoulee",email = "thou_lee@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "flask[async] (>=3.1.1,<4.0.0)",
    "flask-cors (==3.0.10)",
    "python-dotenv (==1.0.0)",
    "python-dateutil (==2.8.2)",
    "gunicorn (==20.1.0)",
    "werkzeug (>=3.1.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "SQLAlchemy (>=2.0.0,<3.0.0)",
    "Flask-SQLAlchemy (>=3.0.0,<4.0.0)",
    "alembic (>=1.10.0,<2.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask-limiter (>=3.12,<4.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "pyarmor (>=9.1.7,<10.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
